Final tweaks for 0.3.0

--- a/only-human.tex
+++ b/only-human.tex
@@ -64,15 +64,15 @@
 
   When a character tries something with a chance of both failure and success, the GM may have them take a \textbf{​test}​ in a \textbf{skill}: their controlling player (or the GM for NPCs) rolls a d20, adds the character's \textbf{modifier} in the \textbf{skill}, and the GM compares that to a \textbf{difficulty} they have set. If the \textbf{test} result is at least the \textbf{difficulty} then the \textbf{test} is a success, otherwise it is a failure.
 
-  To find the character's \textbf{skill} \textbf{modifier} add together their points in the associated \textbf{stats} and divide this by $2$ rounding down (giving the \textbf{stat's} points for \textbf{skills} associated with the same \textbf{stat} twice) then add their points in the \textbf{skill}. References to a \textbf{skill} in a numerical context refer to this \textbf{modifier}.
+  To find the character's \textbf{skill} \textbf{modifier} add together their points in the associated \textbf{stats} and divide this by $2$ rounding down (this is just the \textbf{stat's} points for \textbf{skills} associated with the same \textbf{stat} twice) then add their points in the \textbf{skill}. References to a \textbf{skill} in a numerical context refer to this \textbf{modifier}.
 
   \subsection*{Contests}
 
-  \textbf{Contests} are special kinds of \textbf{tests} for when two or more characters are simultaneously attempting tasks that come into conflict. Each character takes a \textbf{test} in the \textbf{skill} relevant to the task they are attempting. The character(s) with the highest result succeeds, and all other characters fail (perhaps to varying degrees). The GM adjudicates the outcome of any ties.
+  \textbf{Contests} are special kinds of \textbf{tests} for when two or more characters are simultaneously attempting tasks that come into conflict. Each character takes a \textbf{test} in the \textbf{skill} relevant to the task they are attempting. The character with the highest result succeeds, and the other character(s) fail (perhaps to varying degrees). The GM adjudicates the outcome of any ties.
 
   \subsection*{Turns}
 
-  When things get tense characters start taking turns. The turn order, and whether or not they overlap, is up to the GM. Everyone taking a turn represents about 10 seconds of time. During a turn, characters may move, and once per turn (possibly during that movement) they may take an ​\textbf{action​}. Characters may also talk at any point during turns, but the GM should ensure they don’t communicate more than is reasonable for the elapsed time.
+  When things get tense characters start taking turns. The turn order, and whether or not they overlap, is up to the GM. Everyone taking a turn represents about 10 seconds of time. During a turn, characters may move, and once per turn (possibly during that movement) they may take an ​\textbf{action​}. Characters may also talk at any point during turns, but players shouldn't communicate in-character more than is reasonable for the elapsed time.
   
   \textbf{Attacking}, \textbf{running}, \textbf{readying}, some object interactions, or trying to \textbf{stabalise} a character are all actions. As is anything else the GM deems to be.
   
@@ -85,7 +85,7 @@
 
   To \textbf{attack}, a character must be within their weapon's range of their target, and there must be nothing fully blocking the \textbf{attack}. The attacker then makes the relevant of either a \textit{​Ranged attacking​} or a \textit{​Melee attacking​​}  \textbf{test​}, adding their weapon's modifier, and subtracting $2$ for ranged attacks if the attacker is within $2$ metres of the target. The \textbf{difficulty} for this ​\textbf{test​} is $10 + target\:DEX + cover$, where $cover$ is $4$ if the attacker can only see less than half of the target, and $0$ otherwise.
 
-  If the attacker fails, nothing happens. Otherwise, the attack has an \textbf{impact} of the amount the \textbf{test} \textbf{difficulty} was exceeded, minus the absorption of any armour the target is wearing. The target then takes a \textbf{difficulty} $15 + impact$ \textit{Toughness} \textbf{test}. If they fail they get \textbf{injured} and become \textbf{unstable}. If they fail by $10$ to $14$ they get \textbf{injured} twice, if they fail by $15$ or more they get \textbf{injured} three times.
+  If the attacker fails, nothing happens. Otherwise, the attack has an \textbf{impact} of the amount the \textbf{test} \textbf{difficulty} was exceeded by, minus the absorption of any armour the target is wearing. The target then takes a \textbf{difficulty} $15 + impact$ \textit{Toughness} \textbf{test}. If they fail they get \textbf{injured} and become \textbf{unstable}. If they fail by $10$ to $14$ they get \textbf{injured} twice, if they fail by $15$ or more they get \textbf{injured} three times.
 
   If a character \textbf{runs} they double the distance they are permitted to move in the current turn. If a character \textbf{readies} their player must specify a condition and an \textbf{action}. If the condition occurs before their next turn, their character immediately takes the action.
 
@@ -96,7 +96,7 @@
   \begin{tabularx}{\linewidth}{lX}
     Health State & Effect on Character \\
     \hline
-    Normal & They're fine. Characters start \textbf{stable} in this state. \\
+    Normal & They're fine. Characters start in this state, \textbf{stable}. \\
     Wounded & They're hurt, they suffer a $-2$ penalty to all \textbf{tests}. \\
     Seriously Wounded & They're \textit{really} hurt, they suffer a $-4$ penalty to all \textbf{tests} and are \textbf{restricted}. \\
     Incapacitated & They're (effectively) unconscious. They cannot voluntarily do anything. You do not add their DEX to the \textbf{difficulty} of \textbf{tests} to attack them. \\
@@ -105,9 +105,9 @@
 
   \section*{STILL HUMAN}
 
-  Still Human is a sci-fi implementation of the ONLY HUMAN framework, that is, it provides statistics for items, \textbf{roles}, and a hint of a setting. Other implementations should be possible, but they are up to you to create.
+  Still Human is a sci-fi implementation of the ONLY HUMAN framework, that is, it provides \textbf{roles}, statistics for items, and a hint of a setting. Other implementations should be possible, but they are up to you to create.
 
-  Still Human is designed to run games for teams of highly trained or experienced characters that are sent on, or somehow end up entangled in, various missions in reasonably hard sci-fi near-ish future settings.
+  Still Human is designed to run games for teams of highly trained or experienced characters that are sent on, or somehow end up entangled in, various space-related missions in reasonably hard sci-fi near-ish future settings.
 
   \subsection*{Equipment}
 
@@ -115,10 +115,10 @@
     Armour (Absorption) & Description / Effects \\
     \hline
     Normal Clothes (0) & Stylish \textit{and} practical. \\
-    Space Suit (2) & A surprisingly compact vacuum rated environmental suit good for $2$ hours of exposure, with oxygen tanks that can be refilled whenever it is back in atmosphere. If the suit absorbs any damage it is torn, and must be repaired before it will be vacuum worthy. All movement whilst wearing a space suit is effectively through difficult terrain. \\
-    Reinforced Space Suit (3) & A military grade space suit. The same as a space suit, except it is only torn if its wearer is hit with an attack and it cannot absorb all the \textbf{impact} \\
+    Space Suit (2) & A surprisingly compact vacuum rated environmental suit. Two hot-swappable tanks (that passively re-fill in atmosphere) provide one hour of oxygen each. If the suit absorbs any damage it is torn, and must be repaired before it will be vacuum worthy. A character wearing a space suit is \textbf{restricted} \\
+    Reinforced Space Suit (3) & A military grade space suit. The same as a space suit, except it is only torn if its wearer is hit with an attack that results in an \textbf{impact} greater than $0$. \\
     Combat Armour (3) & Tactical body armour. \\
-    Combat Carapace (4) & Heavy duty body armour. All movement whilst wearing combat carapace is effectively through difficult terrain.
+    Combat Carapace (4) & Heavy duty body armour. A character wearing combat carapace is \textbf{restricted}.
   \end{tabularx}
 
   \begin{tabularx}{\linewidth}{lXX}
@@ -141,8 +141,8 @@
     Pad & A smartphone sized, portable, touch screen computer. \\
     Navigator & A small attachment to a pad that uses known maps, available satellite data, and computer vision to attempt to inform the user of their position at all times. \\
     Scanner & A small attachment to a pad that allows various kinds of scanning. Where relevant, a scanner gives a $+2$ modifier to \textit{Investigation} \textbf{tests}. \\
-    Medical Kit & A brief-case sized box containing various medical supplies. Where relevant, a medical kit gives a $+2$ modifier to \textit{Medicine} \textbf{tests}. Additionally, the medical kit contains $5$ stim-shots, that can be used to rouse an unconscious character to the seriously wounded \textbf{health state}, and a defibrillator that can be used to revive a dead character to the seriously wounded \textbf{health state} if they died in the last minute from causes that would be resolved by restarting their heart. The defibrillator has $5$ uses per charge. Use of both the stim-shots and the defibrillator require a successful \textbf{stabilisation} \textbf{test}, if the \textbf{test} is failed they are still used, but have no effect. \\
-    Engineering Kit & A vacuum rated toolbox full of various equipment for dealing with the tech a space-faring engineer might expect to encounter. Where relevant, an engineering kit gives a $+2$ modifier to \textit{Technology} \textbf{tests}. Additionally, the engineering kit contains $5$ patches that can be used to repair tears in space suits.
+    Medical Kit & A brief-case sized box containing various medical supplies. Where relevant, a medical kit gives a $+2$ modifier to \textit{Medicine} \textbf{tests}. Additionally, the medical kit contains $5$ stim-shots, that can be used to rouse an unconscious character to the seriously wounded \textbf{health state}, and a defibrillator that can be used to revive a dead character to the seriously wounded \textbf{health state} if they died in the last minute from causes that would be resolved by restarting their heart. The defibrillator has $5$ uses per charge. Use of both the stim-shots and the defibrillator require a successful \textbf{stabilisation} \textbf{action}, if the \textbf{test} is failed they are still used, but have no effect. \\
+    Engineering Kit & A vacuum rated toolbox full of various equipment for dealing with the tech a space-faring engineer might expect to encounter. Where relevant, an engineering kit gives a $+2$ modifier to \textit{Technology} \textbf{tests}. Additionally, the engineering kit contains $5$ patches that can, as an \textbf{action}, be used to repair tears in space suits.
   \end{tabularx}
 
   \vfill\null
@@ -150,7 +150,7 @@
 
   \subsection*{Roles}
 
-  In additional to the benefits of \textbf{roles} outlined in the character creation section of the basic rules, with the agreement of the GM a character that selects one of the follwoing roles may also take the corresponding piece(s) of equipment, and all characters may take Normal Clothes, a Space Suit, a Short Range Communicator, a Pad, and their choice of either a combat knife or an Auto Pistol.
+  In addition to the benefits of \textbf{roles} outlined in the character creation section of the basic rules, with the agreement of the GM a character that selects one of the following roles may also take the corresponding piece(s) of equipment, and all characters may take Normal Clothes, a Space Suit, a Short Range Communicator, a Pad, and their choice of either a combat knife or an Auto Pistol.
 
   Still Human also adds the \textit{Piloting} \textbf{skill} to a game. It is a DEX + INT \textbf{skill}, and is used in one of the following roles.
 
@@ -224,7 +224,7 @@
 
   \subsection*{Progression}
 
-  It is possible to implement a rudimentary progression system in ONLY HUMAN. The simplest way would be to give players more points to allocate to stats and skills, and perhaps raising the cap on the maximum allocatable to each. If you plan on doing this, consider starting the characters initially with fewer points than the character creation section suggests, as increasing the available points too far beyond this point could leave min-maxed characters with very large \textbf{modifiers}.
+  It is possible to implement a rudimentary progression system in ONLY HUMAN. The simplest way would be to give players more points to allocate to \textbf{stats} and \textbf{skills}, and perhaps raising the cap on the maximum allocatable to each. If you plan on doing this, consider starting the characters initially with fewer points than the character creation section suggests, as increasing the available points too far beyond this point could leave min-maxed characters with very large \textbf{modifiers}.
 
   Another simple progression mechanism, that is perhaps more inline with the ethos of ONLY HUMAN, would be to provide players with better equipment, and better connections in the setting of the game.
 
